k8s/environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuzi-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: zuzanariha.art
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: next
                port:
                  name: http
  tls:
    - hosts:
        - zuzanariha.art
        - www.zuzanariha.art
      secretName: zuzi-art-cert
